package MVC.modelo.entity;

public interface Cloneable<T> {
    T clone();
}
