@startuml
package "P Registrar Ministerios" #FFF2CC {
  class "FMinisterio" as fministerio {
  -MinisteriosController ministeriosController

  -DefaultTableModel modeloTabla
  --
  -actualizarTabla()
  -limpiarTabla(DefaultTableModel modelo)
  }
  class "MinisteriosController" as ctrministerio{
  -Ministerios ministerioPrototipo
  --
  +MinisteriosController()
  +clone(): Ministerios
  +crearMinisterio(): void
  +clonaryCrearMinisterio(): void
  +actualizarMinisterio(Ministerios ministerio): void
  +obtenerMinisterios(): List<Ministerios>
  }
  abstract class MinisteriosTemplate{
  # ministeriosDAO : "MinisteriosDAO"
  --
  +MinisteriosTemplate()
  +procesarMinisterio(Ministerios ministerio): void
  #guardarMinisterio(Ministerios ministerio): void
  #mostrarMensajeExito():void
  #mostrarMensajeError(Exception e): void
  +obtenerMinisterios():List<Ministerios>
  }

  class "CrearMinisterio" as crMinisterio{
    --
    #guardarMinisterio(Ministerios ministerio): void
    #mostrarMensajeExito(): void
  }
  class "ActualizarMinisterio" as actMinisterio{
  --
  #guardarMinisterio(Ministerios ministerio): void
  #mostrarMensajeExito(): void
  }

  class "MinisteriosDAO" as daoministerios{
  --
  +agregarMinisterio(Ministerios ministerios)
  +obtenerMinisterios(): List<Ministerios>
  }

  class "BaseDAO" as daobase {
  --
  +obtenerConexion(): Connection
  +insertar(String tabla, Map<String, Object> campos): boolean
  +actualizar(String tabla, Map<String, Object> campos, String condicion): boolean
  +obtener(String tabla, String condicion, RowMapper<T> rowMapper): T
  +obtenerTodos(String tabla, RowMapper<T> rowMapper): List<T>
  +RowMapper<T>
  }
 class "ConexionBD" as bdconexion{
   -String CONFIG_FILE
   --
   +Connection establecerConexion()
  }
  entity "Ministerios" as ministerios{
      -String nombre
      -String descripcion
      --
      +Ministerios(String Nombre, String Descripcion)
      +Clone(): Ministerios
  }
  interface "Cloneable" as Prototype{
  --
  +Clone(): Ministerios
  }

  fministerio --> ctrministerio
  daobase <|-- daoministerios : extends
  ctrministerio ..> MinisteriosTemplate
  daobase --> bdconexion
  Prototype<|.. ministerios : implements
  ctrministerio ..|> Prototype : implements
  MinisteriosTemplate --> daoministerios
  MinisteriosTemplate <|-- crMinisterio : extends
  MinisteriosTemplate <|-- actMinisterio : extends
}


@enduml